lab2/parser.output
Terminals unused in grammar

   PLUS_ONE
   ONE_PLUS
   MINUS_ONE
   ONE_MINUS
   ASSIGNOP_MINUS
   ASSIGNOP_PLUS
   ASSIGNOP_DIV
   ASSIGNOP_STAR
   STRUCT_DEF
   STRUCT_DEC
   STRUCT_TAG
   BREAK_NODE
   CONTINUE_NODE
   FOR_DEC
   EXT_DEF_LIST
   EXT_VAR_DEF
   FUNC_DEF
   FUNC_DEC
   EXT_DEC_LIST
   PARAM_LIST
   PARAM_DEC
   VAR_DEF
   DEC_LIST
   DEF_LIST
   COMP_STM
   STM_LIST
   EXP_STMT
   IF_THEN
   IF_THEN_ELSE
   FUNC_CALL
   ARGS
   FUNCTION
   PARAM
   ARG
   CALL
   LABEL
   GOTO
   JLT
   JLE
   JGT
   JGE
   EQ
   NEQ
   EXP_ELE
   EXP_ARRAY
   ARRAY_DEC


状态 104 conflicts: 10 reduce/reduce


语法

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FuncDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: %empty
   15       | ID

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FuncDec: ID LP VarList RP
   20        | ID LP RP

   21 VarList: ParamDec
   22        | ParamDec COMMA VarList

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmList RC

   25 StmList: %empty
   26        | Stmt StmList

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt
   33     | FOR LP ForDec RP Stmt
   34     | BREAK SEMI
   35     | CONTINUE SEMI

   36 ForDec: Exp SEMI Exp SEMI Exp
   37       | SEMI Exp SEMI

   38 DefList: %empty
   39        | Def DefList
   40        | error SEMI

   41 Def: Specifier DecList SEMI

   42 Dec: VarDec
   43    | VarDec ASSIGNOP Exp

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp PLUS PLUS
   52    | PLUS PLUS Exp
   53    | Exp PLUS ASSIGNOP Exp
   54    | Exp MINUS Exp
   55    | Exp MINUS MINUS
   56    | MINUS MINUS Exp
   57    | Exp MINUS ASSIGNOP Exp
   58    | Exp STAR Exp
   59    | Exp STAR ASSIGNOP Exp
   60    | Exp DIV Exp
   61    | Exp DIV ASSIGNOP Exp
   62    | LP Exp RP
   63    | MINUS Exp
   64    | NOT Exp
   65    | ID LP Args RP
   66    | ID LP RP
   67    | Exp LB Exp RB
   68    | Exp DOT ID
   69    | ID
   70    | INT
   71    | FLOAT
   72    | CHAR
   73    | STRING

   74 Args: Exp COMMA Args
   75     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 40
INT (258) 18 70
ID (259) 15 16 17 19 20 65 66 68 69
RELOP (260) 49
TYPE (261) 10
FLOAT (262) 71
CHAR (263) 72
STRING (264) 73
STRUCT (265) 12 13
LP (266) 19 20 30 31 32 33 62 65 66
RP (267) 19 20 30 31 32 33 62 65 66
LC (268) 12 24
RC (269) 12 24
SEMI (270) 4 5 7 27 29 34 35 36 37 40 41
COMMA (271) 9 22 45 74
LB (272) 18 67
RB (273) 18 67
DOT (274) 68
PLUS (275) 50 51 52 53
PLUS_ONE (276)
ONE_PLUS (277)
MINUS_ONE (278)
ONE_MINUS (279)
MINUS (280) 54 55 56 57 63
STAR (281) 58 59
DIV (282) 60 61
AND (283) 47
OR (284) 48
NOT (285) 64
IF (286) 30 31
ELSE (287) 31
WHILE (288) 32
RETURN (289) 29
FOR (290) 33
ASSIGNOP (291) 43 46 53 57 59 61
ASSIGNOP_MINUS (292)
ASSIGNOP_PLUS (293)
ASSIGNOP_DIV (294)
ASSIGNOP_STAR (295)
STRUCT_DEF (296)
STRUCT_DEC (297)
STRUCT_TAG (298)
BREAK_NODE (299)
CONTINUE_NODE (300)
FOR_DEC (301)
EXT_DEF_LIST (302)
EXT_VAR_DEF (303)
FUNC_DEF (304)
FUNC_DEC (305)
EXT_DEC_LIST (306)
PARAM_LIST (307)
PARAM_DEC (308)
VAR_DEF (309)
DEC_LIST (310)
DEF_LIST (311)
COMP_STM (312)
STM_LIST (313)
EXP_STMT (314)
IF_THEN (315)
IF_THEN_ELSE (316)
FUNC_CALL (317)
ARGS (318)
FUNCTION (319)
PARAM (320)
ARG (321)
CALL (322)
LABEL (323)
GOTO (324)
JLT (325)
JLE (326)
JGT (327)
JGE (328)
EQ (329)
NEQ (330)
EXP_ELE (331)
EXP_ARRAY (332)
ARRAY_DEC (333)
BREAK (334) 34
CONTINUE (335) 35
UMINUS (336)
LOWER_THEN_ELSE (337)


Nonterminals, with rules where they appear

$accept (83)
    左： 0
program (84)
    左： 1, 右： 0
ExtDefList (85)
    左： 2 3, 右： 1 3
ExtDef (86)
    左： 4 5 6 7, 右： 3
ExtDecList (87)
    左： 8 9, 右： 4 9
Specifier (88)
    左： 10 11, 右： 4 5 6 23 41
StructSpecifier (89)
    左： 12 13, 右： 11
OptTag (90)
    左： 14 15, 右： 12
Tag (91)
    左： 16, 右： 13
VarDec (92)
    左： 17 18, 右： 8 9 18 23 42 43
FuncDec (93)
    左： 19 20, 右： 6
VarList (94)
    左： 21 22, 右： 19 22
ParamDec (95)
    左： 23, 右： 21 22
CompSt (96)
    左： 24, 右： 6 28
StmList (97)
    左： 25 26, 右： 24 26
Stmt (98)
    左： 27 28 29 30 31 32 33 34 35, 右： 26 30 31 32 33
ForDec (99)
    左： 36 37, 右： 33
DefList (100)
    左： 38 39 40, 右： 12 24 39
Def (101)
    左： 41, 右： 39
Dec (102)
    左： 42 43, 右： 44 45
DecList (103)
    左： 44 45, 右： 41 45
Exp (104)
    左： 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66 67 68 69 70 71 72 73, 右： 27 29 30 31 32 36 37 43 46 47
    48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 67 68 74 75
Args (105)
    左： 74 75, 右： 65 74


State 0

    0 $accept: . program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    program          转到状态 4
    ExtDefList       转到状态 5
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 14 (OptTag)

    OptTag  转到状态 11
    Tag     转到状态 12


State 4

    0 $accept: program . $end

    $end  shift, and go to state 13


State 5

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       转到状态 14
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FuncDec CompSt

    ID    shift, and go to state 15
    SEMI  shift, and go to state 16

    ExtDecList  转到状态 17
    VarDec      转到状态 18
    FuncDec     转到状态 19


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   15 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 20


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: program $end .

    $default  接受


State 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 15

   17 VarDec: ID .
   19 FuncDec: ID . LP VarList RP
   20        | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 17 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 18

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 8 (ExtDecList)


State 19

    6 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 25

    CompSt  转到状态 26


State 20

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 38 (DefList)

    Specifier        转到状态 28
    StructSpecifier  转到状态 8
    DefList          转到状态 29
    Def              转到状态 30


State 21

   19 FuncDec: ID LP . VarList RP
   20        | ID LP . RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 31

    Specifier        转到状态 32
    StructSpecifier  转到状态 8
    VarList          转到状态 33
    ParamDec         转到状态 34


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  转到状态 36
    VarDec      转到状态 18


State 24

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 37


State 25

   24 CompSt: LC . DefList StmList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT       reduce using rule 38 (DefList)
    ID        reduce using rule 38 (DefList)
    FLOAT     reduce using rule 38 (DefList)
    CHAR      reduce using rule 38 (DefList)
    STRING    reduce using rule 38 (DefList)
    LP        reduce using rule 38 (DefList)
    LC        reduce using rule 38 (DefList)
    RC        reduce using rule 38 (DefList)
    PLUS      reduce using rule 38 (DefList)
    MINUS     reduce using rule 38 (DefList)
    NOT       reduce using rule 38 (DefList)
    IF        reduce using rule 38 (DefList)
    WHILE     reduce using rule 38 (DefList)
    RETURN    reduce using rule 38 (DefList)
    FOR       reduce using rule 38 (DefList)
    BREAK     reduce using rule 38 (DefList)
    CONTINUE  reduce using rule 38 (DefList)

    Specifier        转到状态 28
    StructSpecifier  转到状态 8
    DefList          转到状态 38
    Def              转到状态 30


State 26

    6 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   40 DefList: error . SEMI

    SEMI  shift, and go to state 39


State 28

   41 Def: Specifier . DecList SEMI

    ID  shift, and go to state 35

    VarDec   转到状态 40
    Dec      转到状态 41
    DecList  转到状态 42


State 29

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 43


State 30

   39 DefList: Def . DefList

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT       reduce using rule 38 (DefList)
    ID        reduce using rule 38 (DefList)
    FLOAT     reduce using rule 38 (DefList)
    CHAR      reduce using rule 38 (DefList)
    STRING    reduce using rule 38 (DefList)
    LP        reduce using rule 38 (DefList)
    LC        reduce using rule 38 (DefList)
    RC        reduce using rule 38 (DefList)
    PLUS      reduce using rule 38 (DefList)
    MINUS     reduce using rule 38 (DefList)
    NOT       reduce using rule 38 (DefList)
    IF        reduce using rule 38 (DefList)
    WHILE     reduce using rule 38 (DefList)
    RETURN    reduce using rule 38 (DefList)
    FOR       reduce using rule 38 (DefList)
    BREAK     reduce using rule 38 (DefList)
    CONTINUE  reduce using rule 38 (DefList)

    Specifier        转到状态 28
    StructSpecifier  转到状态 8
    DefList          转到状态 44
    Def              转到状态 30


State 31

   20 FuncDec: ID LP RP .

    $default  reduce using rule 20 (FuncDec)


State 32

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  转到状态 45


State 33

   19 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 46


State 34

   21 VarList: ParamDec .
   22        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 47

    $default  reduce using rule 21 (VarList)


State 35

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 36

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 37

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 48


State 38

   24 CompSt: LC DefList . StmList RC

    INT       shift, and go to state 49
    ID        shift, and go to state 50
    FLOAT     shift, and go to state 51
    CHAR      shift, and go to state 52
    STRING    shift, and go to state 53
    LP        shift, and go to state 54
    LC        shift, and go to state 25
    PLUS      shift, and go to state 55
    MINUS     shift, and go to state 56
    NOT       shift, and go to state 57
    IF        shift, and go to state 58
    WHILE     shift, and go to state 59
    RETURN    shift, and go to state 60
    FOR       shift, and go to state 61
    BREAK     shift, and go to state 62
    CONTINUE  shift, and go to state 63

    $default  reduce using rule 25 (StmList)

    CompSt   转到状态 64
    StmList  转到状态 65
    Stmt     转到状态 66
    Exp      转到状态 67


State 39

   40 DefList: error SEMI .

    $default  reduce using rule 40 (DefList)


State 40

   18 VarDec: VarDec . LB INT RB
   42 Dec: VarDec .
   43    | VarDec . ASSIGNOP Exp

    LB        shift, and go to state 24
    ASSIGNOP  shift, and go to state 68

    $default  reduce using rule 42 (Dec)


State 41

   44 DecList: Dec .
   45        | Dec . COMMA DecList

    COMMA  shift, and go to state 69

    $default  reduce using rule 44 (DecList)


State 42

   41 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 70


State 43

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 44

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


State 45

   18 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 23 (ParamDec)


State 46

   19 FuncDec: ID LP VarList RP .

    $default  reduce using rule 19 (FuncDec)


State 47

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        转到状态 32
    StructSpecifier  转到状态 8
    VarList          转到状态 71
    ParamDec         转到状态 34


State 48

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 49

   70 Exp: INT .

    $default  reduce using rule 70 (Exp)


State 50

   65 Exp: ID . LP Args RP
   66    | ID . LP RP
   69    | ID .

    LP  shift, and go to state 72

    $default  reduce using rule 69 (Exp)


State 51

   71 Exp: FLOAT .

    $default  reduce using rule 71 (Exp)


State 52

   72 Exp: CHAR .

    $default  reduce using rule 72 (Exp)


State 53

   73 Exp: STRING .

    $default  reduce using rule 73 (Exp)


State 54

   62 Exp: LP . Exp RP

    INT     shift, and go to state 49
    ID      shift, and go to state 50
    FLOAT   shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53
    LP      shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57

    Exp  转到状态 73


State 55

   52 Exp: PLUS . PLUS Exp

    PLUS  shift, and go to state 74


State 56

   56 Exp: MINUS . MINUS Exp
   63    | MINUS . Exp

    INT     shift, and go to state 49
    ID      shift, and go to state 50
    FLOAT   shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53
    LP      shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 75
    NOT     shift, and go to state 57

    Exp  转到状态 76


State 57

   64 Exp: NOT . Exp

    INT     shift, and go to state 49
    ID      shift, and go to state 50
    FLOAT   shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53
    LP      shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57

    Exp  转到状态 77


State 58

   30 Stmt: IF . LP Exp RP Stmt
   31     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 78


State 59

   32 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 79


State 60

   29 Stmt: RETURN . Exp SEMI

    INT     shift, and go to state 49
    ID      shift, and go to state 50
    FLOAT   shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53
    LP      shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57

    Exp  转到状态 80


State 61

   33 Stmt: FOR . LP ForDec RP Stmt

    LP  shift, and go to state 81


State 62

   34 Stmt: BREAK . SEMI

    SEMI  shift, and go to state 82


State 63

   35 Stmt: CONTINUE . SEMI

    SEMI  shift, and go to state 83


State 64

   28 Stmt: CompSt .

    $default  reduce using rule 28 (Stmt)


State 65

   24 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 84


State 66

   26 StmList: Stmt . StmList

    INT       shift, and go to state 49
    ID        shift, and go to state 50
    FLOAT     shift, and go to state 51
    CHAR      shift, and go to state 52
    STRING    shift, and go to state 53
    LP        shift, and go to state 54
    LC        shift, and go to state 25
    PLUS      shift, and go to state 55
    MINUS     shift, and go to state 56
    NOT       shift, and go to state 57
    IF        shift, and go to state 58
    WHILE     shift, and go to state 59
    RETURN    shift, and go to state 60
    FOR       shift, and go to state 61
    BREAK     shift, and go to state 62
    CONTINUE  shift, and go to state 63

    $default  reduce using rule 25 (StmList)

    CompSt   转到状态 64
    StmList  转到状态 85
    Stmt     转到状态 66
    Exp      转到状态 67


State 67

   27 Stmt: Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . PLUS PLUS
   53    | Exp . PLUS ASSIGNOP Exp
   54    | Exp . MINUS Exp
   55    | Exp . MINUS MINUS
   57    | Exp . MINUS ASSIGNOP Exp
   58    | Exp . STAR Exp
   59    | Exp . STAR ASSIGNOP Exp
   60    | Exp . DIV Exp
   61    | Exp . DIV ASSIGNOP Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID

    RELOP     shift, and go to state 86
    SEMI      shift, and go to state 87
    LB        shift, and go to state 88
    DOT       shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    ASSIGNOP  shift, and go to state 96


State 68

   43 Dec: VarDec ASSIGNOP . Exp

    INT     shift, and go to state 49
    ID      shift, and go to state 50
    FLOAT   shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53
    LP      shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57

    Exp  转到状态 97


State 69

   45 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   转到状态 40
    Dec      转到状态 41
    DecList  转到状态 98


State 70

   41 Def: Specifier DecList SEMI .

    $default  reduce using rule 41 (Def)


State 71

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 72

   65 Exp: ID LP . Args RP
   66    | ID LP . RP

    INT     shift, and go to state 49
    ID      shift, and go to state 50
    FLOAT   shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53
    LP      shift, and go to state 54
    RP      shift, and go to state 99
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57

    Exp   转到状态 100
    Args  转到状态 101


State 73

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . PLUS PLUS
   53    | Exp . PLUS ASSIGNOP Exp
   54    | Exp . MINUS Exp
   55    | Exp . MINUS MINUS
   57    | Exp . MINUS ASSIGNOP Exp
   58    | Exp . STAR Exp
   59    | Exp . STAR ASSIGNOP Exp
   60    | Exp . DIV Exp
   61    | Exp . DIV ASSIGNOP Exp
   62    | LP Exp . RP
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID

    RELOP     shift, and go to state 86
    RP        shift, and go to state 102
    LB        shift, and go to state 88
    DOT       shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    ASSIGNOP  shift, and go to state 96


State 74

   52 Exp: PLUS PLUS . Exp

    INT     shift, and go to state 49
    ID      shift, and go to state 50
    FLOAT   shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53
    LP      shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57

    Exp  转到状态 103


State 75

   56 Exp: MINUS . MINUS Exp
   56    | MINUS MINUS . Exp
   63    | MINUS . Exp

    INT     shift, and go to state 49
    ID      shift, and go to state 50
    FLOAT   shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53
    LP      shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 75
    NOT     shift, and go to state 57

    Exp  转到状态 104


State 76

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . PLUS PLUS
   53    | Exp . PLUS ASSIGNOP Exp
   54    | Exp . MINUS Exp
   55    | Exp . MINUS MINUS
   57    | Exp . MINUS ASSIGNOP Exp
   58    | Exp . STAR Exp
   59    | Exp . STAR ASSIGNOP Exp
   60    | Exp . DIV Exp
   61    | Exp . DIV ASSIGNOP Exp
   63    | MINUS Exp .
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID

    LB   shift, and go to state 88
    DOT  shift, and go to state 89

    $default  reduce using rule 63 (Exp)


State 77

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . PLUS PLUS
   53    | Exp . PLUS ASSIGNOP Exp
   54    | Exp . MINUS Exp
   55    | Exp . MINUS MINUS
   57    | Exp . MINUS ASSIGNOP Exp
   58    | Exp . STAR Exp
   59    | Exp . STAR ASSIGNOP Exp
   60    | Exp . DIV Exp
   61    | Exp . DIV ASSIGNOP Exp
   64    | NOT Exp .
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID

    LB   shift, and go to state 88
    DOT  shift, and go to state 89

    $default  reduce using rule 64 (Exp)


State 78

   30 Stmt: IF LP . Exp RP Stmt
   31     | IF LP . Exp RP Stmt ELSE Stmt

    INT     shift, and go to state 49
    ID      shift, and go to state 50
    FLOAT   shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53
    LP      shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57

    Exp  转到状态 105


State 79

   32 Stmt: WHILE LP . Exp RP Stmt

    INT     shift, and go to state 49
    ID      shift, and go to state 50
    FLOAT   shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53
    LP      shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57

    Exp  转到状态 106


State 80

   29 Stmt: RETURN Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . PLUS PLUS
   53    | Exp . PLUS ASSIGNOP Exp
   54    | Exp . MINUS Exp
   55    | Exp . MINUS MINUS
   57    | Exp . MINUS ASSIGNOP Exp
   58    | Exp . STAR Exp
   59    | Exp . STAR ASSIGNOP Exp
   60    | Exp . DIV Exp
   61    | Exp . DIV ASSIGNOP Exp
   67    | Exp . LB Exp RB
   68    | Exp . DOT ID

    RELOP     shift, and go to state 86
    SEMI      shift, and go to state 107
    LB        shift, and go to state 88
    DOT       shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    ASSIGNOP  shift, and go to state 96


State 81

   33 Stmt: FOR LP . ForDec RP Stmt

    INT     shift, and go to state 49
    ID      shift, and go to state 50
    FLOAT   shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53
    LP      shift, and go to state 54
    SEMI    shift, and go to state 108
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57

    ForDec  转到状态 109
    Exp     转到状态 110


State 82

   34 Stmt: BREAK SEMI .

    $default  reduce using rule 34 (Stmt)


State 83

   35 Stmt: CONTINUE SEMI .

    $default  reduce using rule 35 (Stmt)


State 84

   24 CompSt: LC DefList StmList RC .

    $default  reduce using rule 24 (CompSt)


State 85

   26 StmList: Stmt StmList .

    $default  reduce using rule 26 (StmList)


State 86

   49 Exp: Exp RELOP . Exp

    INT     shift, and go to state 49
    ID      shift, and go to state 50
    FLOAT   shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53
    LP      shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57

    Exp  转到状态 111


State 87

   27 Stmt: Exp SEMI .

    $default  reduce using rule 27 (Stmt)


State 88

   67 Exp: Exp LB . Exp RB

    INT     shift, and go to state 49
    ID      shift, and go to state 50
    FLOAT   shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53
    LP      shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57

    Exp  转到状态 112


State 89

   68 Exp: Exp DOT . ID

    ID  shift, and go to state 113


State 90

   50 Exp: Exp PLUS . Exp
   51    | Exp PLUS . PLUS
   53    | Exp PLUS . ASSIGNOP Exp

    INT       shift, and go to state 49
    ID        shift, and go to state 50
    FLOAT     shift, and go to state 51
    CHAR      shift, and go to state 52
    STRING    shift, and go to state 53
    LP        shift, and go to state 54
    PLUS      shift, and go to state 114
    MINUS     shift, and go to state 56
    NOT       shift, and go to state 57
    ASSIGNOP  shift, and go to state 115

    Exp  转到状态 116


State 91

   54 Exp: Exp MINUS . Exp
   55    | Exp MINUS . MINUS
   57    | Exp MINUS . ASSIGNOP Exp

    INT       shift, and go to state 49
    ID        shift, and go to state 50
    FLOAT     shift, and go to state 51
    CHAR      shift, and go to state 52
    STRING    shift, and go to state 53
    LP        shift, and go to state 54
    PLUS      shift, and go to state 55
    MINUS     shift, and go to state 117
    NOT       shift, and go to state 57
    ASSIGNOP  shift, and go to state 118

    Exp  转到状态 119


State 92

   58 Exp: Exp STAR . Exp
   59    | Exp STAR . ASSIGNOP Exp

    INT       shift, and go to state 49
    ID        shift, and go to state 50
    FLOAT     shift, and go to state 51
    CHAR      shift, and go to state 52
    STRING    shift, and go to state 53
    LP        shift, and go to state 54
    PLUS      shift, and go to state 55
    MINUS     shift, and go to state 56
    NOT       shift, and go to state 57
    ASSIGNOP  shift, and go to state 120

    Exp  转到状态 121


State 93

   60 Exp: Exp DIV . Exp
   61    | Exp DIV . ASSIGNOP Exp

    INT       shift, and go to state 49
    ID        shift, and go to state 50
    FLOAT     shift, and go to state 51
    CHAR      shift, and go to state 52
    STRING    shift, and go to state 53
    LP        shift, and go to state 54
    PLUS      shift, and go to state 55
    MINUS     shift, and go to state 56
    NOT       shift, and go to state 57
    ASSIGNOP  shift, and go to state 122

    Exp  转到状态 123


State 94

   47 Exp: Exp AND . Exp

    INT     shift, and go to state 49
    ID      shift, and go to state 50
    FLOAT   shift, and go to state 51
    CHAR    shift, and go to state 52
    STRING  shift, and go to state 53
    LP      shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57

    Exp  转到状态 124


State 95

   48 Exp: Exp OR . Exp
